<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_lg">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_alarm_label"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAlarmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/title_repeat_days"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            app:chipSpacingHorizontal="@dimen/spacing_xxs">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMon"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_mon" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipTue"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_tue" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipWed"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_wed" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipThu"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_thu" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipFri"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_fri" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipSat"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_sat" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chipSun"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_sun" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swSnooze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:text="@string/label_enable_snooze"
            android:checked="true"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xl"
            android:text="@string/title_wakeup_mission"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <RadioGroup
            android:id="@+id/rgMissionType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbMath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_math"
                android:checked="true" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbShake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_shake" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbTyping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_typing" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbStroop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_stroop" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_emoji" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbMemory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_memory" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_sort" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbSimon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_simon" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_step" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbMove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_move" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_light" />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_qr" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
