<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/icon_size_md"
        android:layout_height="@dimen/icon_size_md"
        android:layout_marginTop="@dimen/spacing_md"
        android:layout_marginEnd="@dimen/spacing_md"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/cd_settings"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/color_text_primary" />

    <TextClock
        android:id="@+id/textClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format12Hour="hh:mm a"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_display"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="@dimen/spacing_massive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPickRingtone"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_change_ringtone"
        android:textColor="@color/color_text_secondary"
        app:icon="@drawable/ic_ringtone"
        app:iconTint="@color/color_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textClock" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlarms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_md"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/list_bottom_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickRingtone" />

    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickRingtone"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_state_title"
            android:textColor="@color/color_text_disabled"
            android:textSize="@dimen/text_size_body_large" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmptyAdd"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xs"
            android:text="@string/action_add_alarm"
            android:textColor="@color/color_primary" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSetAlarm"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_massive"
        android:contentDescription="@string/cd_add_alarm"
        app:backgroundTint="@color/color_primary"
        app:elevation="@dimen/elevation_fab"
        app:pressedTranslationZ="@dimen/elevation_fab_pressed"
        app:useCompatPadding="true"
        app:maxImageSize="@dimen/icon_size_sm"
        app:rippleColor="@color/color_ripple_white_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>
