<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:id="@+id/tvMissionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_wake_up_mission"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_massive" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_display"
        app:layout_constraintBottom_toTopOf="@+id/etAnswer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMissionTitle"
        tools:text="15 + 24 = ?" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_your_answer"
        android:inputType="number"
        android:textColor="@color/color_text_primary"
        android:textColorHint="@color/color_text_disabled"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_subtitle"
        android:backgroundTint="@color/color_text_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_lg"
        android:text="@string/action_stop_alarm"
        android:textSize="@dimen/text_size_body_large"
        android:backgroundTint="@color/color_primary"
        android:layout_marginTop="@dimen/spacing_xxl"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer" />

</androidx.constraintlayout.widget.ConstraintLayout>
