<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:padding="@dimen/spacing_xl">

    <TextView
        android:id="@+id/tvMissionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_step_mission"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_massive" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_step"
        android:textColor="@color/color_text_secondary"
        android:textSize="@dimen/text_size_body_large"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMissionTitle"
        android:layout_marginTop="@dimen/spacing_md" />

    <ImageView
        android:id="@+id/ivStepIcon"
        android:layout_width="@dimen/icon_size_lg"
        android:layout_height="@dimen/icon_size_lg"
        android:contentDescription="@string/cd_step_icon"
        android:src="@drawable/ic_directions_walk"
        app:tint="@color/color_text_primary"
        app:layout_constraintBottom_toTopOf="@+id/tvStepCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions" />

    <TextView
        android:id="@+id/tvStepCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_text_primary"
        android:textSize="@dimen/text_size_display"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/spacing_giant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="0 / 10" />

</androidx.constraintlayout.widget.ConstraintLayout>
